fixed bug in scrolling tumblefeed, added z-index

--- a/public/stylesheets/tumblefeed.css
+++ b/public/stylesheets/tumblefeed.css
@@ -16,6 +16,7 @@ body{
 	width: 100%;
 	min-height:150px;
 	background-color: #666;
+	z-index: 13;
 	}
 .userbar-container img{
 	max-height: 100px;
